add final to parameters .. guided by PMD
git-svn-id: https://svn.apache.org/repos/asf/accumulo/trunk@1383681 13f79535-47bb-0310-9956-ffa450edef68